--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -562,7 +562,7 @@
     font-weight: 500;
     line-height: 34px;
     margin-bottom: 0;
-    margin-top: 10px;
+    margin-top: 0;
 
     @include sm {
       font-size: 20px;
@@ -605,7 +605,7 @@
     h4,
     h5,
     h6 {
-      margin-bottom: 10px;
+      margin-bottom: 0;
     }
 
     p {
@@ -864,6 +864,7 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
     flex-wrap: wrap;
 
